fix: prose iframe overflow

--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -118,6 +118,10 @@
   @apply bg-zinc-100;
 }
 
+.prose iframe {
+  max-width: 100%;
+}
+
 .prose .task-list-item {
   @apply list-none;
 }
